[tool.poetry]
name = "vkbc"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.2"
SQLalchemy = "^2.0.31"
fastapi = "^0.111.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
aiobotocore = "^2.13.1"
numpy = "^2.0.0"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
